--- a/tests.html
+++ b/tests.html
@@ -2,7 +2,7 @@
 	<head></head>
 	
 	<script src="candidategenerator.js"></script>
-	<script src="build/spot.js"></script>
+	<script src="prosodicHierarchy.js"></script>
 	
 	<body>
 		<script>
