Made recursiveCat an option
Intsead  of an argument, recursiveCat is now an option of GEN.

--- a/test/NickRichGenTest.html
+++ b/test/NickRichGenTest.html
@@ -2,5 +2,6 @@
 
 <script src="../candidategenerator.js"></script>
 <script src="../prosodicHierarchy.js"></script>
+<script src="../build/constraints.js"></script>
 
 </html>
