--- a/interface1.html
+++ b/interface1.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>SPOT Interface</title>
 		
+		<script src="Truck99(test).js"></script>
 		<script src="build/spot.js"></script>
 		<link rel="stylesheet" type="text/css" href="spot.css">
 		
@@ -378,7 +379,12 @@
 	                	<button id="htmlToJsonTreeButton" type="button">Done! Convert tree to code</button>
 	            	</div>
 	            	<hr/>
-					<div style="display:none"><button id="danishJsonTreesButton" type="button">Danish Trees: generate s-tree code</button></div>
+					<div>
+					<button id="danishJsonTreesButton" type="button">Danish Trees: generate s-tree code</button>
+					<button id="tohonoOodhamJsonTreesButton" type="button">TohonoOodham Trees-Truckenbrodt: generate s-tree code</button>
+					<button id="Truckconstraintsbutton" type="button">Truckenbrodt constraints: select all</button>
+					</div>
+
 					
 					<p><small><b>For manual tree entry:</b> Select a tree from your JavaScript tree file (pre-made trees are in the directory <i>main/trees</i>, and end with .js). Paste in the contents of JS file of your input syntactic tree (from the opening brace to the closing brace, removing any comments and excluding the final semi-colon). Note that if you're only using Markedness constraints, you can just keep the default value of an empty tree (like so: {}) as the syntactic input.</small></p>
 					<textarea class="stree-textarea" name="sTree" rows="15">{}</textarea>
