Ito&Mester Japanese Trees Button
Added a javascript file with all of the trees from the work on Japanese phrasal structure by Ito&Mester.

Added another button to the spot build and interface that generate the trees from the javascript file

--- a/interface1.html
+++ b/interface1.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>SPOT Interface</title>
 		
+		<script src="japaneseForinterface.js"></script>
 		<script src="Truck99(test).js"></script>
 		<script src="build/spot.js"></script>
 		<link rel="stylesheet" type="text/css" href="spot.css">
@@ -382,6 +383,7 @@
 					<div>
 					<button id="danishJsonTreesButton" type="button">Danish Trees: generate s-tree code</button>
 					<button id="tohonoOodhamJsonTreesButton" type="button">TohonoOodham Trees-Truckenbrodt: generate s-tree code</button>
+					<button id="Japanesetreesbutton" type="button">Ito-Mester Japanese Trees: generate s-tree code</button>
 					<button id="Truckconstraintsbutton" type="button">Truckenbrodt constraints: select all</button>
 					</div>
 
